objects/CSIRCD__CountryMap__c.object
<CustomObject>
    <description>Table to map ISO2 country codes to ISO3 for submission to ATTUS.</description>
    <fields>
        <fullName>CSIRCD__Country_Name__c</fullName>
        <label>Country Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSIRCD__ISO2Code__c</fullName>
        <label>ISO2Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__ISO3Code__c</fullName>
        <label>ISO3Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>ATTUS Country Map</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Country Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CountryMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>